force-app/main/default/objects/AdditionalContactDetails__c/AdditionalContactDetails__c.object-meta.xml
<CustomObject>
    <label>Additional Contact Detail</label>
    <nameField>
        <displayFormat>Additional Detail - {00}</displayFormat>
        <label>Contact Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Contact Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>