force-app/main/default/objects/AdditionalContactDetails__c/fields/AdditionalEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>AdditionalEmailAddress__c</fullName>
    <inlineHelpText>Any additional Email address that this Contact has apart from their primary email address.</inlineHelpText>
    <label>Additional Email Address</label>
    <type>Email</type>
</CustomField>