force-app/main/default/objects/AdditionalContactDetails__c/fields/AdditionalMobileNumber__c.field-meta.xml
<CustomField>
    <fullName>AdditionalMobileNumber__c</fullName>
    <inlineHelpText>Any additional mobile number that this Contact has apart from their primary phone number.</inlineHelpText>
    <label>Additional Mobile Number</label>
    <type>Phone</type>
</CustomField>